@@ -4,6 +4,7 @@ v 8.12.4 (unreleased)
   - Fix "Copy to clipboard" tooltip to say "Copied!" when clipboard button is clicked. !6294 (lukehowell)
   - Fix padding in build sidebar. !6506
   - Changed compare dropdowns to dropdowns with isolated search input. !6550
+  - Fix race condition on LFS Token. !6592
 
 v 8.12.3
   - Update Gitlab Shell to support low IO priority for storage moves
